# umami

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  layerparser.cpp  layerparser.h  log.txt  main.cpp  renderGrid.cpp  renderGroup.cpp  renderLayer.cpp  renderSlider.cpp  renderStatus.cpp  renderText.cpp  renderVis.cpp  render_element.cpp  render_helpers.cpp  render_shared.cpp  render_shared.h  renderer.cpp  skin.cpp  skin.h  umami.cbp  umami.depend  umami.sln  umami.vcxproj  umami.vcxproj.filters  umamistructs.h  wasabiparser.cpp  wasabiparser.h  ~AutoRecover.umami.vcxproj
freeform/wacs/xml/addons/: addons.xml
freeform/wacs/xml/colorthemes/: colorthemes.xml
freeform/wacs/xml/config/: config-groups.xml  config.xml
freeform/wacs/xml/config/scripts/: cfgbool.m  cfgbool.maki  cfgfloat.m  cfgfloat.maki  cfgint.m  cfgint.maki  cfgstring.m  cfgstring.maki
freeform/wacs/xml/directsound/: directsound-prefs.xml
freeform/wacs/xml/infoedit/: config.xml  mp3.xml  vorbis.xml
freeform/wacs/xml/midi/: midi-prefs.xml
freeform/wacs/xml/pledit/: editor.m  editor.maki  editor.xml  elements.xml  pledit.xml  searchline.m  searchline.maki
freeform/wacs/xml/preferences/: preferences.xml
freeform/wacs/xml/skinswitch/: skins.xml
freeform/wacs/xml/stdsvc/: msgbox.xml
freeform/wacs/xml/winamp/: about.xml  bookmarks.xml  winampconfig.xml
freeform/wacs/xml/winamp/prefs/: prefs-audio.xml  prefs-browser.xml  prefs-cdaudio.xml  prefs-desktopalpha.xml  prefs-display.xml  prefs-fades.xml  prefs-httpreader.xml  prefs-internet.xml  prefs-media.xml  prefs-playlists.xml  prefs-system.xml  prefs-usage.xml  prefs-video.xml  prefs-vis.xml  prefs-visual.xml
freeform/wacs/xml/winamp/scripts/: textslidercb.m  textslidercb.maki  titleboxslidercb.m  titleboxslidercb.maki
freeform/xml/wasabi/: wasabi.xml
freeform/xml/wasabi/xml/xui/browser/: build.bat
skin/: skin.xml
skin/scripts/: debug.sym
skin/xml/: player-normal-group.xml
skins/AS-FxS/: skin.xml
skins/AS-FxS/scripts/: analogbeats.maki  clock.maki  filetype.maki  general.maki  knob.maki  lcdbeats.maki  peakled.maki
skins/AS-FxS/scripts/sources/: std.mi
skins/AS-FxS/workpics/: IRON.psd
skins/Bento/scripts/: buildall.bat  debug.sym
skins/Bento/xml/: player-elements.xml  player-normal-sui.xml
skins/Big Bento/xml/: player-elements.xml  player-normal-sui.xml  player-normal.xml
skins/Default/: skin.xml
skins/Default/scripts/: center.m  center.maki  firststart.m  firststart.maki  hide.m  main.m  main.maki
skins/Default/xml/: color-presets.xml  eq-advanced-group.xml  eq-advanced.xml  eq-elements.xml  eq-normal-group.xml  eq-normal.xml  eq-shade-group.xml  eq-shade.xml  eq.xml  player-elements.xml  player-normal-group.xml  player-normal.xml  player-shade-group.xml  player-shade.xml  player.xml  pledit-elements.xml  pledit-normal-group.xml  pledit-normal.xml  pledit-shade-group.xml  pledit-shade.xml  pledit.xml  thinger.xml  tooltip.xml  video-elements.xml  video-normal-group.xml  video-normal.xml  video-shade-group.xml  video-shade.xml  video.xml
skins/Default3b2/: skin.xml
skins/Default3b2/Scripts/: cfgbool.m  cfgint.m  cfgstring.m  standardframe.m  standardframe.maki  sysfunc.m  sysfunc.maki
skins/Default3b2/xml/: components-elements.xml  components.xml  eq-elements.xml  eq-normal.xml  eq-shade.xml  eq.xml  gamma-presets.xml  minibrowser-elements.xml  minibrowser.xml  player-elements.xml  player-normal.xml  player-shade.xml  player.xml  pledit-elements.xml  pledit.xml  scripts.xml  skin-pieces.xml  standardframe.xml  studio-config.xml  studio-elements.xml  studio.xml  thinger-elements.xml  thinger-normal.xml  thinger-shade.xml  thinger.xml
src/: main.cpp
src/core/: PlayerCore.cpp  PlayerCore.h  WinampData.cpp  WinampData.h  WinampSaData.cpp  WinampSaData.h
src/renderer/: renderGrid.cpp  renderGroup.cpp  renderLayer.cpp  renderSlider.cpp  renderStatus.cpp  renderText.cpp  renderVis.cpp  render_element.cpp  render_helpers.cpp  render_shared.cpp  render_shared.h  renderer.cpp
src/skin/: skin.cpp  skin.h  wasabiparser.cpp  wasabiparser.h
